k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: motd
  template:
    metadata:
      labels:
        app: motd
    spec:
      containers:
      - name: motd-cont
        image: kerylthiry/microservice:1
        ports:
        - containerPort: 5555
