k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: keryl-thiry.amnay.fr
    http:
      paths:
      - path: /motd
        pathType: Prefix
        backend:
          service:
            name: clusterip
            port:
              number: 80
